--- a/static/index.html
+++ b/static/index.html
@@ -87,18 +87,18 @@
             <div class="hidden md:block">
               <div class="flex items-baseline space-x-4">
                 <a
-                  href="#"
-                  class="bg-gray-100 text-gray-900 px-3 py-2 rounded-md text-sm font-medium"
+                  href="/"
+                  class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
                   >Dashboard</a
                 >
                 <a
-                  href="#"
-                  class="text-gray-600 hover:text-gray-900 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium transition"
+                  href="/library"
+                  class="text-gray-300 hover:text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium transition"
                   >Library</a
                 >
                 <a
-                  href="#"
-                  class="text-gray-600 hover:text-gray-900 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium transition"
+                  href="/admin"
+                  class="text-gray-300 hover:text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium transition"
                   >Admin</a
                 >
               </div>
