--- a/static/library.html
+++ b/static/library.html
@@ -112,6 +112,18 @@
 
     <!-- Main Content: Spreadsheet Table -->
     <main class="flex-1 w-full max-w-[100vw] px-4 py-8 overflow-x-auto">
+      <!-- NEW: Toolbar above the table -->
+      <div class="mb-4 flex justify-between items-center">
+        <h1 class="text-xl font-bold text-gray-800">Library</h1>
+        <button
+          onclick="toggleAll()"
+          id="toggleAllBtn"
+          class="bg-white border border-gray-300 text-gray-700 hover:bg-gray-50 px-3 py-1.5 rounded-md text-sm font-medium transition shadow-sm flex items-center"
+        >
+          <i class="fas fa-compress-arrows-alt mr-2"></i> Collapse All
+        </button>
+      </div>
+
       <div
         class="bg-white rounded-xl shadow-sm border border-gray-200 overflow-hidden"
       >
@@ -187,12 +199,32 @@
       let sortCol = "";
       let sortAsc = true;
 
+      // NEW: State variables to track collapsed series and ratings
+      let collapsedSeries = new Set();
+      let isAllCollapsed = false;
+      let seriesRatings = {};
+
       // Fetch data on load
       async function fetchLibrary() {
         try {
-          const response = await fetch(`${API_BASE_URL}/anime`);
-          originalData = await response.json();
+          // Fetch both anime entries and series metadata concurrently
+          const [animeRes, seriesRes] = await Promise.all([
+            fetch(`${API_BASE_URL}/anime`),
+            fetch(`${API_BASE_URL}/series`),
+          ]);
+
+          originalData = await animeRes.json();
           displayData = [...originalData];
+
+          // Map series ratings for quick lookup
+          const seriesData = await seriesRes.json();
+          seriesData.forEach((s) => {
+            if (s.series_en && s.rating_series)
+              seriesRatings[s.series_en] = s.rating_series;
+            else if (s.series_cn && s.rating_series)
+              seriesRatings[s.series_cn] = s.rating_series;
+          });
+
           renderTable();
         } catch (error) {
           console.error("Failed to load library data:", error);
@@ -236,16 +268,44 @@
 
         // 3. Render Groups and their Items
         seriesNames.forEach((seriesName) => {
-          // Render Group Header Row
+          const isCollapsed = collapsedSeries.has(seriesName);
+          const chevronClass = isCollapsed
+            ? "fa-chevron-right text-gray-400"
+            : "fa-chevron-down text-gray-600";
+
+          // Format the Series Rating Badge
+          let seriesRatingBadge = "";
+          const sRating = seriesRatings[seriesName];
+          if (sRating) {
+            let sRatingColor = "text-gray-600 border-gray-300 bg-white";
+            if (["S", "A+", "A"].includes(sRating))
+              sRatingColor = "text-red-700 border-red-200 bg-red-50";
+            else if (["B", "C"].includes(sRating))
+              sRatingColor = "text-blue-700 border-blue-200 bg-blue-50";
+
+            seriesRatingBadge = `<span class="px-2 py-0.5 text-[10px] uppercase tracking-wider rounded border ${sRatingColor} font-bold ml-2 shadow-sm">Overall: ${sRating}</span>`;
+          }
+
+          // Render Group Header Row (Now Clickable)
           const headerTr = document.createElement("tr");
-          headerTr.className = "bg-gray-100/80 border-y border-gray-200";
+          headerTr.className =
+            "bg-gray-100/80 border-y border-gray-200 cursor-pointer hover:bg-gray-200/80 transition-colors";
+          headerTr.onclick = () => toggleSeries(seriesName);
           headerTr.innerHTML = `
-                    <td colspan="12" class="px-4 py-3 font-bold text-gray-800 text-sm">
-                        <i class="fas fa-layer-group text-brand mr-2"></i>${seriesName}
-                        <span class="text-xs text-gray-500 font-normal ml-2">(${groupedData[seriesName].length} Entries)</span>
+                    <td colspan="12" class="px-4 py-3 font-bold text-gray-800 text-sm select-none">
+                        <div class="flex items-center">
+                            <i class="fas ${chevronClass} w-4 text-center mr-1"></i>
+                            <i class="fas fa-layer-group text-brand mr-2"></i>
+                            <span>${seriesName}</span>
+                            <span class="text-xs text-gray-500 font-normal ml-2">(${groupedData[seriesName].length} Entries)</span>
+                            ${seriesRatingBadge}
+                        </div>
                     </td>
                 `;
           tbody.appendChild(headerTr);
+
+          // If this series is collapsed, skip rendering its children!
+          if (isCollapsed) return;
 
           // 4. Sort Items inside the group
           const animesInSeries = groupedData[seriesName];
@@ -311,8 +371,8 @@
             const tr = document.createElement("tr");
             tr.className = "hover:bg-gray-50 transition-colors";
             tr.innerHTML = `
-                        <td class="px-4 py-3 pl-8 font-medium text-gray-900 max-w-[250px] truncate" title="${title}">
-                            <i class="fas fa-angle-right text-gray-300 mr-2 text-xs"></i>${title}
+                        <td class="px-4 py-3 pl-10 font-medium text-gray-900 max-w-[250px] truncate" title="${title}">
+                            ${title}
                         </td>
                         <td class="px-4 py-3 ${ratingColor}">${rating}</td>
                         <td class="px-4 py-3">
@@ -331,6 +391,37 @@
             tbody.appendChild(tr);
           });
         });
+      }
+
+      // NEW: Toggle a single series
+      function toggleSeries(seriesName) {
+        if (collapsedSeries.has(seriesName)) {
+          collapsedSeries.delete(seriesName); // Expand
+        } else {
+          collapsedSeries.add(seriesName); // Collapse
+        }
+        renderTable();
+      }
+
+      // NEW: Toggle all series globally
+      function toggleAll() {
+        isAllCollapsed = !isAllCollapsed;
+        const btn = document.getElementById("toggleAllBtn");
+
+        if (isAllCollapsed) {
+          // Add every visible series to the collapsed set
+          displayData.forEach((anime) => {
+            const seriesName =
+              anime.series_en || anime.series_cn || "Standalone / Other";
+            collapsedSeries.add(seriesName);
+          });
+          btn.innerHTML = `<i class="fas fa-expand-arrows-alt mr-2"></i> Expand All`;
+        } else {
+          // Clear the set to expand everything
+          collapsedSeries.clear();
+          btn.innerHTML = `<i class="fas fa-compress-arrows-alt mr-2"></i> Collapse All`;
+        }
+        renderTable();
       }
 
       // Handle Sorting (State update only)
